error handler added validation added
